fixed spelling errors, minor css tweaks

--- a/src/app/pages/pwr/pwr.html
+++ b/src/app/pages/pwr/pwr.html
@@ -1,7 +1,5 @@
 <div>
-    <h2><i class="fa fa-flash"></i> Christmas Light Show</h2>
-
-    <h4>Rusty's Crazy Scheme</h4>
+    <h2><i class="fa fa-flash"></i> Rusty's Crazy Scheme</h2>
 
     <p>You would expect no less from the inventor of the Cthurkey.</p>
 
