--- a/src/app/app.less
+++ b/src/app/app.less
@@ -1,15 +1,3 @@
-/*
-body > div {
-  position:absolute;
-  top:0px;
-  bottom:0px;
-  right:0px;
-  left:0px;
-};
-
-
-*/
-
 body {
   .unselectable();
 };
@@ -56,8 +44,8 @@ body {
   .flexbox();
   .flex-direction(row);
   #Menu {
-    max-width: 256px;
-    .flex(2013,1,0,auto);
+    max-width:256px;
+    .flex(2013,1,0,256px);
     background-color: #31394a;
     .menu-item, .menu-header {
       bottom:0px;
@@ -89,7 +77,7 @@ body {
   }
   #Page {
     .flex(2013,1,1,auto);
-    padding:10px;
+    padding:15px;
   }
 }
 
